--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <nav class="container d-flex justify-between nav-dark">
                 <label for="burger">
-                    <img src="icons/menu-fill.svg" alt=""><span>Menu</span>
+                    <img src="icons/menu-fill.svg" alt="">
                 </label>
                 <input type="checkbox" id="burger" hidden>
             <ul class="d-flex align-center">
